# CommonCpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CommonCpp.cpp  LICENSE  README.md  asset-manifest.json  index.html  manifest.json  parselib-coverity-model.cpp  precache-manifest.66ccd10af10d0ad096b9a8bdf715ad6c.js  precache-manifest.9881610e40c9d3670694cf448c9af5cd.js  precache-manifest.db3d8ab89cdc7cb0a4b47536c2bfce2a.js  service-worker.js
.github/: CODEOWNERS
FileLib/: CMakeLists.txt
FileLib/docs/: requirements.md
FileLib/src/: CMakeLists.txt  loadText.cpp  main.cpp
Filum/src/: CMakeLists.txt  file_inst.cpp  loadText.cpp
Filum/src/DataStructures/: AbstractDataStructure.cpp  AbstractDataStructure.hpp  CSVData.hpp
Filum/src/Factories/: AbstractFactory.cpp  AbstractFactory.hpp  CSV_Factory.cpp  CSV_Factory.hpp
Filum/src/Reads/: ReadCSV.cpp  ReadCSV.hpp  ReadStrategy.cpp  ReadStrategy.hpp
Filum/src/Writes/: WriteStrategy.cpp  WriteStrategy.hpp
Filum/src/abstract/DataStructures/: AbstractDataStructure.hpp
Filum/src/abstract/Factories/: AbstractFactory.hpp
Filum/src/abstract/Reads/: ReadStrategy.cpp  ReadStrategy.hpp
Filum/src/concrete/csv/: CSV_Factory.cpp  readme.md
libraries/ParseLib/src/: CMakeLists.txt  ParseLib.cpp  colortext.cpp  csv.cpp  loadText.cpp  writeText.cpp
libraries/ParseLib/src/abstract/: CMakeLists.txt  plTransaction.cpp  plTransaction.hpp
libraries/ParseLib/src/abstract/DataStructures/: AbstractDataStructure.cpp  Hash.cpp  Hash.hpp  InstanceSet.cpp  InstanceSet.hpp  MetaLDS.cpp  MetaLDS.hpp  plDataSet.cpp  plDataSet.hpp  plHash.cpp  plHash.hpp  plInstance.cpp  plInstance.hpp  plNode.cpp  plNode.hpp  readme.md
libraries/ParseLib/src/abstract/Factories/: AbstractFactory.cpp  AbstractFactory.hpp
libraries/ParseLib/src/abstract/Reads/: ParserFilter.cpp  ParserFilter.hpp  ParserOutput.hpp  ParserPipeline.cpp  ParserPipeline.hpp  ReadStrategy.cpp  ReadStrategy.hpp  SharedQueue.hpp  Stream.hpp  node.cpp  node.hpp  threading.c  threading.cpp
libraries/ParseLib/src/abstract/Reads/Streams/: CharacterStream.hpp  Stream.hpp  TokenStream.hpp
libraries/ParseLib/src/abstract/Writes/: WriteStrategy.cpp  WriteStrategy.hpp
libraries/ParseLib/src/abstract/data/: CMakeLists.txt  instance.hpp  plDataSet.cpp  plDataSet.hpp  plInstance.cpp  plInstance.hpp  readme.md
libraries/ParseLib/src/abstract/data/dataset/: README.md  data_set.cpp  dataset_accessors.cpp  dataset_key_compilation.cpp  dataset_mutators.cpp  plDataSet.cpp
libraries/ParseLib/src/abstract/data/instance/: instance.cpp  instance_accessors.cpp  instance_mutators.cpp  plInstance.cpp
libraries/ParseLib/src/abstract/data/keys/: keys.hpp
libraries/ParseLib/src/abstract/data/meta/: CMakeLists.txt  DataModel.hpp  Descriptor.hpp  Entity.hpp  Interface.hpp  README.md  Relationship.hpp
libraries/ParseLib/src/abstract/data/source/: plDataSet.cpp  plInstance.cpp
libraries/ParseLib/src/abstract/data/structures/: README.md  hash_table.hpp  node.hpp
libraries/ParseLib/src/abstract/data/types/: types.hpp
libraries/ParseLib/src/abstract/file_loader/: FileLoader.hpp
libraries/ParseLib/src/abstract/file_loader/private/: CharacterTarget.hpp
libraries/ParseLib/src/abstract/lexer/: CMakeLists.txt  Lexer.hpp  README.md
libraries/ParseLib/src/abstract/parser/: CMakeLists.txt  Parser.hpp  README.md
libraries/ParseLib/src/abstract/semantic_analyzer/: CMakeLists.txt  README.md  SemanticAnalyzer.hpp
libraries/ParseLib/src/concrete/csv/: CSVData.cpp  CSVData.hpp  CSVFilters.cpp  CSVFilters.hpp  CSV_Factory.cpp  CSV_Factory.hpp  CSV_Write.cpp  CSV_Write.hpp  HeaderProperties.hpp  HeaderShape.hpp  HeaderToken.hpp  ReadCSV.cpp  ReadCSV.hpp  RecordProperties.hpp  RecordShape.hpp  RecordToken.hpp  ValueProperties.hpp  ValueToken.hpp  csv_data_set.cpp  csv_filters.cpp  csv_filters.hpp  csv_net.hpp  csv_read.cpp  csv_read.hpp  csv_token_filters.cpp  csv_token_filters.hpp  readme.md
libraries/ParseLib/src/concrete/png/: readme.md
libraries/ParseLib/src/concrete/raw/: readme.md
libraries/ParseLib/src/misc/: colortext.hpp
libraries/ParseLib/src/utils/: colortext.hpp  csv.cpp  loadText.h  load_text.h  stopwatch.hpp  writeText.h  write_text.h
libraries/ParseLib/src/utils/source/: colortext.cpp  loadText.cpp  load_text.cpp  stopwatch.cpp  writeText.cpp  write_text.cpp
libraries/ParseLib/tests/: CMakeLists.txt  README.md  TestComponents  TestIntegration
libraries/ParseLib/tests/src/: CSVFormatSpecTests.hpp  CSVFunctionalTests.hpp  CSVPerformanceTests.hpp  SetPath.hpp  TestAll.cpp  TestComponents.cpp  TestFramework.hpp  TestIntegration.cpp  TestSystem.cpp  TestsMain.cpp
libraries/ParseLib/tests/src/ComponentTests/: ComponentTests.hpp  LexerComponentTests.hpp  Manifest.hpp
libraries/ParseLib/tests/src/IntegrationTests/: IntegrationTests.hpp  Manifest.hpp
libraries/ParseLib/tests/test_data/: test2.csv
libraries/ParseLib/tests/test_data/CSV/: csvR7_1_read.csv  csvR7_3_read.csv
libraries/PlanusFilum/src/: CMakeLists.txt  colortext.cpp  colortext.hpp  csv.cpp  file_inst.cpp
libraries/PlanusFilum/src/abstract/DataStructures/: AbstractDataStructure.cpp  AbstractDataStructure.hpp  Entity.hpp  Hash.cpp  Hash.hpp
libraries/PlanusFilum/src/abstract/Factories/: AbstractFactory.hpp
libraries/PlanusFilum/src/abstract/Reads/: ParserFilter.cpp  ParserFilter.hpp  ParserOutput.cpp  ParserOutput.hpp  ParserPipeline.cpp  ParserPipeline.hpp  ReadStrategy.cpp  ReadStrategy.hpp  node.cpp  node.hpp
libraries/PlanusFilum/src/abstract/Writes/: WriteStrategy.cpp
libraries/PlanusFilum/src/concrete/csv/: CSVData.cpp  CSVData.hpp  CSVFilters.cpp  CSVFilters.hpp  CSV_Factory.cpp  CSV_Factory.hpp  ReadCSV.cpp  ReadCSV.hpp
tests/: CMakeLists.txt
tests/src/: CSVFormatSpecTests.hpp  CSVFunctionalTests.hpp  CSVPerformanceTests.hpp  CSVWhitebox.hpp  TestFramework.hpp  TestsMain.cpp
tests/test_data/: test1.csv  test2.csv
tests/test_data/CSV/FormatSpec/: csv2.csv  csv3-2.csv  csv3-2H.csv  csv3-3.csv  csv3-3H.csv  csv3H.csv  csv4-1.csv  csv4-1H.csv  csv4H.csv  csv5-1H.csv  csv5H.csv  csv6H.csv
(+271 files in other folders)
